# yaxshilink

./: .dockerignore  .gitignore  Dockerfile  README.md  README_SETUP.md  config.example.json  docker-compose.yml  install.py  install.sh  integration_instructions-1.md  main.py  new.py  pyproject.toml  req.txt  requirements.txt  setup_cli.py  setup_rpi.sh
app/: __init__.py  api_client.py  app_main.py  arduino.py  config.py  logger.py  monitor.py  scanner.py  state.py  ws_client.py
barcode/: admin.py  models.py  serializers.py  urls.py  views.py
barcode/migrations/: 0001_initial.py  0002_alter_bottle_image_alter_bottle_material.py  0003_remove_bottle_image.py  0004_bottle_image.py
config/: asgi.py  consumers.py  routing.py  settings.py  urls.py
deploy/: fandomat.service
device/: admin.py  consumers.py  models.py  routing.py  serializers.py  urls.py  utils.py  views.py
device/migrations/: 0001_initial.py  0002_session.py
hardware/: filename.txt
hardware/main/: fandomat-1.53F.ino  main.c  main.ino
order/: admin.py  models.py  serializers.py  urls.py  views.py
order/migrations/: 0001_initial.py
scripts/: install.sh
users/: admin.py  models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_smscode.py
yaxshilink/: __init__.py  app.py  cli.py  config.py  ui.py
